--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
             <artifactId>jquery</artifactId>
             <version>3.4.1</version>
         </dependency>
-        <dependency>
+<!--    <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
             <version>${jaxb.version}</version>
@@ -79,7 +79,7 @@
             <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-impl</artifactId>
             <version>${jaxb.version}</version>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
