added codecov config and badge

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,9 @@ jobs:
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
-      - run: mvn install -DskipTests
+      #- run: mvn install -DskipTests
+      - CODECOV_TOKEN="77a0c70f-a063-49d7-805c-a9f10a338e01"
+      - run: mvn integration-test cobertura:cobertura
 
       - run: mvn dependency:go-offline
 
@@ -40,4 +42,6 @@ jobs:
           key: v1-dependencies-{{ checksum "pom.xml" }}
 
       # run tests!
-      - run: mvn integration-test
+      - run:
+          name: Send to CodeCov
+          command: bash <(curl -s https://codecov.io/bash)
