--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,9 +30,7 @@ jobs:
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
-      #- run: mvn install -DskipTests
-
-      - run: mvn integration-test cobertura:cobertura
+      - run: mvn install -DskipTests
 
       - run: mvn dependency:go-offline
 
@@ -42,6 +40,4 @@ jobs:
           key: v1-dependencies-{{ checksum "pom.xml" }}
 
       # run tests!
-      - run:
-          name: Send to CodeCov
-          command: bash <(curl -s https://codecov.io/bash)
+      - run: mvn integration-test
